adding packing and maps and inventory

--- a/pages/packing.html
+++ b/pages/packing.html
@@ -1,9 +1,13 @@
 ---
 layout: page
 title: Packing List
-permalink: /packing.html
+permalink: /packing/
 ---
 
+<iframe style="width:100%;" class="viewport-full" src="https://docs.google.com/document/d/e/2PACX-1vQCg8n-fDxikyocnEH6D38X5I7uULIV88FUbjh2MnLi-skRPY2kdyS8dCXblNTzjM0bwcLnMETd3kzc/pub?embedded=true"></iframe>
+
+
+<!-- 
 <style>
 	li{
 		margin-left:20px;
@@ -59,3 +63,4 @@ While our gear hauling toboggans are big, so is gear and food for 4 - 8 people f
 
 #### How much beer?
 Cans are known to bounce, bump, and explode in a fully loaded gear sled over 11 miles. Large groups planning on bringing ~ 80 cans of beer should consider purchasing a pony keg.
+ -->
