--- a/pages-classes/02-womens-avalanche-1.html
+++ b/pages-classes/02-womens-avalanche-1.html
@@ -6,4 +6,5 @@ layout: class
 permalink: /womens-avy-one/
 date_string: "December 14 - 16, 2018"
 description: "A Women's Only AIARE Level 1 Course"
+published: false
 ---
