updating avalanche courses to direct to bbh

--- a/pages/classes.html
+++ b/pages/classes.html
@@ -25,7 +25,8 @@ order: 3
 	</div>
 </div>
 
-<h2 id="upcoming-classes" class="mt12 py12 border-b">Upcoming Classes &amp; Clinics: </h2>
+<h2 id="upcoming-classes" class="mt12 py12 border-b">Upcoming Classes &amp; Clinics at YurtSki: </h2>
+<p>Montana Backcountry Yurts is still offering AIARE Level 1 courses and Backcountry Skills clinics at our <a class="link" target="_blank" href="https://bigbelthut.com">Big Belt Hut</a> location in January, February, and March. Visit <a href="https://montanabackcountryyurts.com/classes" class="link" target="_blank">montanabackcountryurts.com/classes</a> for more info.</p>
 
 {% include list-classes.html %}
 
