--- a/pages-classes/03-avalanche-1.html
+++ b/pages-classes/03-avalanche-1.html
@@ -5,5 +5,6 @@ widget_date: '20181228'
 layout: class
 permalink: /aiare-avy-one/
 date_string: "December 28 - 30, 2018"
+published: false
 description: "AIARE Level 1 Course"
 ---
