adding new instructions for driving

--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@ subTitle: Montana Backcountry Skiing & Lodging in the Swan Range
 
 <p class="pt6 txt-m txt-em">Unforgettable Montana backcountry lodging & skiing experience.</p>
 
-{% include offerings.html %}
-
-<p>At Yurtski we pride ourselves in providing unforgettable backcountry skiing experiences. Our goal is for people to enjoy the beauty of the Swan Range safely and in comfort while getting some incredible powder turns.
-</p>
-
-<p>Our yurts lie deep in the Montana backcountry and offer unparalleled access to some of Montana’s best powder skiing. Our immediate terrain is situated off a large horseshoe shaped ridge with finger ramps that separate the area into three main bowls which funnel back down to the yurts. The skiing ranges from mellow glades to steep wide open bowls. The area offers exceptional views of the Missions, Swans, and the Bob Marshall/Scapegoat Wilderness and has endless potential.
-
-<p>So check out the video below for a glimpse at a day in life at YurtSki, and then get a group together for an experience that will last a life time!</p>
+<!-- {% include offerings.html %} -->
 
 <div class="align-center">
 <iframe class="embedded-video" src="https://www.youtube.com/embed/cQxT1Rym_48" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
+
+
+<p>At Yurtski we pride ourselves in providing unforgettable backcountry skiing experiences. Our goal is for people to enjoy the beauty of the Swan Range safely and in comfort while getting some incredible powder turns. See the video above for a glimpse of life at YurtSki, and then get a group together for an experience that will last a life time!</p>
+
+<p>Our yurts lie deep in the Montana backcountry and offer unparalleled access to some of Montana’s best powder skiing. Our immediate terrain is situated off a large horseshoe shaped ridge with finger ramps that separate the area into three main bowls which funnel back down to the yurts. The skiing ranges from mellow glades to steep wide open bowls. The area offers exceptional views of the Missions, Swans, and the Bob Marshall/Scapegoat Wilderness and has endless potential.
 
 <div class="mt24 mb24 align-center">
   <img class="mx-auto" src="img/somuchsnow-medium.jpg">
