--- a/pages/yurts.html
+++ b/pages/yurts.html
@@ -15,12 +15,14 @@ header: '/img/yurts-night-bg.jpg'
 	<div class='flex-child flex-child--no-shrink w360 px12 pb12'>
 		<h3 class='txt-h3 align-center'>Lupine Yurt</h3>
 		<img src='/img/lupine-yurt-snow.jpg'>
+
 		<p>Sitting at approximately 6,600 feet, the Lupine yurt sleeps 6-8 people comfortably with great access to lower-angle tree skiing.</p>
 	</div>
 
 	<div class='flex-child flex-child--no-shrink w360 px12 pb12'>
 		<h3 class='txt-h3 align-center'>Alpine Yurt</h3>
 		<img src='/img/alpine-yurt.png'>
+		
 		<p>Sitting at approximately 6,800 feet, the Alpine yurt is well situated for skiing the open bowls on Mount Morrell. Sleeps 6-8.</p>
 	</div>
 
@@ -36,9 +38,17 @@ header: '/img/yurts-night-bg.jpg'
 
 <p class="pt6">The yurts feature wood stoves for heat and clotheslines and hooks to hang and dry your gear. Each yurt has a stocked wood pile and axes to keep the stove burning through the night.</p>
 
-<p class="pt6">Each yurt is equipped with a well-stocked kitchen including pots+pans, kettles, knives, cutting boards, utensils, mugs, plates, and bowls for 8. There are three burner propane stoves and each yurt has a sink that filters to a greywater drain.
+<p class="pt6">Each yurt is equipped with a well-stocked kitchen including pots+pans, kettles, knives, cutting boards, utensils, mugs, plates, and bowls for 8. There are three burner propane stoves and each yurt has a sink that filters to a greywater drain.</p>
 
-<img class="mt6" src="/img/inside-yurt.jpg">
+<p>Inside the Alpine Yurt</p>
+
+<!-- <img class="mt6" src="/img/inside-yurt.jpg"> -->
+
+<img src='/img/inside-alpine-2019.jpg'>
+
+<p class="pt6">Inside the Lupine Yurt</p>
+
+<img src='/img/inside-lupine-2019.jpg'>
 
 <p class="pt6">Drinking water can be retrieved on the way into the yurts from a mountain spring so that you don't have to melt snow. In order to answer nature’s call in comfort there is a three sided outhouse located directly behind each yurt. There is also a Life flight extraction kit (helicopter specific backboard, splints, neck braces, emergency blanket, six man carry, basic first aid, rescue toboggan).</p>
 
