captions and color adjust

--- a/pages/yurts.html
+++ b/pages/yurts.html
@@ -38,17 +38,15 @@ header: '/img/yurts-night-bg.jpg'
 
 <p class="pt6">The yurts feature wood stoves for heat and clotheslines and hooks to hang and dry your gear. Each yurt has a stocked wood pile and axes to keep the stove burning through the night.</p>
 
-<p class="pt6">Each yurt is equipped with a well-stocked kitchen including pots+pans, kettles, knives, cutting boards, utensils, mugs, plates, and bowls for 8. There are three burner propane stoves and each yurt has a sink that filters to a greywater drain.</p>
-
-<p>Inside the Alpine Yurt</p>
+<p class="pt6">Each yurt is equipped with a well-stocked kitchen including pots+pans, kettles, knives, cutting boards, utensils, mugs, plates, and bowls for 8. There are three burner propane stoves and each yurt with three-bin wash basin systems.</p>
 
 <!-- <img class="mt6" src="/img/inside-yurt.jpg"> -->
 
 <img src='/img/inside-alpine-2019.jpg'>
-
-<p class="pt6">Inside the Lupine Yurt</p>
+<p class="txt-em">Inside the Alpine Yurt</p>
 
 <img src='/img/inside-lupine-2019.jpg'>
+<p class="txt-em">Inside the Lupine Yurt</p>
 
 <p class="pt6">Drinking water can be retrieved on the way into the yurts from a mountain spring so that you don't have to melt snow. In order to answer nature’s call in comfort there is a three sided outhouse located directly behind each yurt. There is also a Life flight extraction kit (helicopter specific backboard, splints, neck braces, emergency blanket, six man carry, basic first aid, rescue toboggan).</p>
 
