updated for the 2020 season

--- a/pages/prices.html
+++ b/pages/prices.html
@@ -62,48 +62,15 @@ header: '/img/skinning.jpg'
 <h2 id="gear-haul" class="txt-h2 mt24">Snowmobile Gear Haul + Tow</h2>
 <p class="">We have large gear hauling toboggans to take the weight off your back (and allow you to bring more beer)! The snowmobile route to the yurt is 11 miles. <strong>We will tow your gear all the way to the yurt</strong>.</p>
 
-<p>The ski route to the yurt is only 8 miles. Gear haul includes a tow rope for members of your group for all but 1.5 miles of the 8 mile ski. These 1.5 miles include a 1,500ft climb. If there is a lot of new snow, our snowmobile driver will bring his skis and can break in the skin track for you if requested. We will send you maps and more informtion with confirmation of your reservation. </p>
+<p>Gear hauls are $200 + $20 / person</p>
 
-<p>To accommodate guests to both yurts, we offer two fixed times for gear hauls: <strong>8:30am</strong> and <strong>11:30am</strong>. These are first-come, first-serve time slots purchased online with your reservation at the base prices below. If you would like to book <strong>any time</strong> that works better for your group, perhaps after work or one of the fixed times already reserved by another party, our gear haul drivers are happy to accomodate for a $50 surcharge.</p>
-
-<div class="align-center px36">
-	<table class="table">
-			<tr>
-				<td></td>
-				<th>First Toboggan<br></th>
-				<th>Each Additional Toboggan<br></th>
-			</tr>
-			<tr>
-				<td><strong>Haul In</strong><br>8:30am or 11:30am</td>
-				<td> $300 </td>
-				<td> $200 </td>
-			</tr>
-			<tr>
-				<td><strong>Haul In</strong><br>Any time of your choosing</td>
-				<td> $350 </td>
-				<td> $200 </td>
-			</tr>
-			<tr>
-				<th><strong>Haul Out</th>
-				<td> $300 </td>
-				<td> $200 </td>
-			</tr>
-	</table>
-</div>
-
-<p class="mt12">We will coordinate your gear haul out time at the trailhead.</p>
-
-<p class="mt12">Each toboggan is approximately 3' by 8' and can carry up to 350 lbs. A group of 6 for 3 nights can usually fit all of their gear in one toboggan. We will try to fit your gear into one toboggan; however, if an additional gear haul is required, we charge an additional $200 per toboggan.</p>
+<p>Each toboggan is approximately 3' by 8' and can carry up to 350 lbs.</p>
 
 <p class="mt12"><strong>How To Book: </strong><a class="link" href="/book/">Reserve a yurt</a> and add the Gear Haul items as add-on items at checkout.</p>
 
 
 
-
 <!-- CATERING -->
-
-
-
 
 
 <h2 id="catering" class="txt-h2 mt24">Catering</h2>
@@ -140,7 +107,7 @@ header: '/img/skinning.jpg'
 </p>
 
 
-<p>Using the "Pay Now" link also allows you to login or create an account where you can <em>modify</em> or <em>cancel</em> your bookings up to 30 days prior to your start date. Perhaps you decided you want a gear haul? Maybe an extra toboggan? You can do it all online!</p>
+<p>Using the "Pay Now" link also allows you to login or create an account where you can <em>modify</em> or <em>cancel</em> your bookings up to 30 days prior to your start date. Perhaps you decided you want a gear haul?</p>
 
 <h4 class="txt-h4 mt12 py6">Cancellation</h4>
 
