--- a/pages/classes.html
+++ b/pages/classes.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Classes at Yurtski for the 2018 - 2019 Season
+title: Classes at Yurtski for the 2019 - 2020 Season
 permalink: /classes/
 navigation_title: Classes
 header: '/img/bowl-small.jpeg'
@@ -12,7 +12,7 @@ order: 3
 <div class='flex-parent flex-parent--wrap'>
 
 	<div class='flex-child flex-child--no-shrink w360 pt24 px12'>
-    <p class="txt-l"><span class="color-green txt-l">New This Year!</span> YurtSki is now an <a class="link" target="_blank" href="http://avtraining.org/">AIARE</a> course provider.</p>
+    <p class="txt-l">YurtSki is proud to be an <a class="link" target="_blank" href="http://avtraining.org/">AIARE</a> course provider.</p>
 
     <p>YurtSki is the perfect spot to take a backcountry ski clinic or take an Avalanche course to learn about backcountry hazards.</p>
 
@@ -26,9 +26,7 @@ order: 3
 </div>
 
 <h2 id="upcoming-classes" class="mt12 py12 border-b">Upcoming Classes &amp; Clinics at YurtSki: </h2>
-<p>Montana Backcountry Yurts is still offering AIARE Level 1 courses and Backcountry Skills clinics at our <a class="link" target="_blank" href="https://bigbelthut.com">Big Belt Hut</a> location in January, February, and March. Visit <a href="https://montanabackcountryyurts.com/classes" class="link" target="_blank">montanabackcountryurts.com/classes</a> for more info.</p>
 
-{% include list-classes.html %}
+Visit <a href="https://montanabackcountryyurts.com/classes" class="link" target="_blank">montanabackcountryurts.com/classes</a> for the latest info. When we get schedules finalized, we'll post them here.</p>
 
-
-<p class="mt24 py12 border-t">If you'd like to run a course or clinic at YurtSki, please <a class="link" href="mailto:info@yurtski.com">contact us</a>, we'd love to work with you!</p>
+<p class="mt24 py12 border-t">If you'd like to run a course or clinic at YurtSki, please <a class="link" href="mailto:info@montanabackcountryyurts.com">contact us</a>, we'd love to work with you!</p>
