--- a/book.html
+++ b/book.html
@@ -71,7 +71,7 @@
 
   <div class="header-container">
 
-    <a href="http://localhost:4000">
+    <a href="https://montanabackcountryyurts.com">
       <img class="sub-header-logo" src="/img/mby-logo-transparent.png">
     </a>
 
