Automagically building YurtSki from moba

--- a/packing.html
+++ b/packing.html
@@ -172,8 +172,7 @@
       <div class="breadcrumbs">
         <a href="https://montanabackcountryurts.com">Montana Backcountry Yurts</a> > 
 
-        <!-- TODO: Make this more relative -->
-        <a href="/yurtski/">YurtSki</a> > 
+        <a href="https://montanabackcountryyurts.com/yurtski/">YurtSki</a> > 
 
         Packing List
         </div>
