Automagically building YurtSki from moba

--- a/classes.html
+++ b/classes.html
@@ -215,7 +215,7 @@ Check out our preliminary schedule for the 2019-2020 season below. </p>
 </em></p>
 
 	
-		<a style="position:absolute; top:50px; right:10px;" class="button" href="/yurtski/womens-dec-avy-one">Book Now!</a>
+		<a style="position:absolute; top:50px; right:10px;" class="button" href="https://montanabackcountryyurts.com/yurtski/womens-dec-avy-one">Book Now!</a>
 	
 
 </div>
@@ -248,7 +248,7 @@ Check out our preliminary schedule for the 2019-2020 season below. </p>
 </em></p>
 
 	
-		<a style="position:absolute; top:50px; right:10px;" class="button" href="/yurtski/dec-avy-one">Book Now!</a>
+		<a style="position:absolute; top:50px; right:10px;" class="button" href="https://montanabackcountryyurts.com/yurtski/dec-avy-one">Book Now!</a>
 	
 
 </div>
@@ -312,7 +312,7 @@ Check out our preliminary schedule for the 2019-2020 season below. </p>
 	<p class='tight'><em>A women's only all-inclusive 2 day, 1 night introduction to backcountry skiing and winter backcountry travel. Learn the basics of backcountry skiing: skinning, avalanche awareness, and basic backcountry gear needs while staying at YurtSki.</em></p>
 
 	
-		<a style="position:absolute; top:50px; right:10px;" class="button" href="/yurtski/womens-bc-skills">Book Now!</a>
+		<a style="position:absolute; top:50px; right:10px;" class="button" href="https://montanabackcountryyurts.com/yurtski/womens-bc-skills">Book Now!</a>
 	
 
 </div>
