Automagically building YurtSki from moba

--- a/book.html
+++ b/book.html
@@ -273,6 +273,8 @@
 	item_id: '4',
 	category_id: '2',
 	date: '20191203',
+	// options: 'hidedates',
+	pipe: 'https://montanabackcountryyurts.com/assets/checkfront-helper.html',
 	provider: 'droplet'
 	}).render();
 	</script>
@@ -298,7 +300,9 @@ new DROPLET.Widget ({
 host: 'yurtski.checkfront.com',
 target: 'CHECKFRONT_WIDGET_02',
 item_id: '2',
+// options: 'hidedates',
 category_id: '2',
+pipe: 'https://montanabackcountryyurts.com/assets/checkfront-helper.html',
 date: '20191203',
 provider: 'droplet'
 }).render();
