--- a/inventory.html
+++ b/inventory.html
@@ -165,7 +165,7 @@
 </header>
 
 <body>
-  <style>
+  <!-- <style>
 #banner{
 	position:relative;
 	width:100%;
@@ -238,7 +238,7 @@
 	document.getElementById('close-button').addEventListener('click',function(){
 		document.getElementById('banner').style.display='none';	
 	})
-</script>
+</script> -->
   <section class="container row">
     <div class="ten columns">
       <div class="breadcrumbs">
