--- a/classes.html
+++ b/classes.html
@@ -339,13 +339,13 @@ Check out our preliminary schedule for the 2019-2020 season below. </p>
          <div class="mt12 focus-box">
 	<h5>AIARE Level 2 Avalanche Course</h5>
 
-	<h6 class='focus-emphasis'>January 3-5, 2020</h6>
+	<h6 class='focus-emphasis'>January 2-5, 2020</h6>
 
 	<h6 class='focus-emphasis'>Location: <span class="location">YurtSki</span></h6>
 
-	<p class='tight'>$600</p>
+	<p class='tight'>$700</p>
 
-	<p class='tight'><em>3 day, 2 night all-inclusive AIARE Level 2 Avalanche course at YurtSki (Mt. Morrell, Swan Range)</em></p>
+	<p class='tight'><em>4 Days of all-inclusive AIARE avalanche education: 1 for Avy Rescue followed by a 3-day Level 2 course. </em></p>
 
 	
 		<a style="position:absolute; top:75px; right:10px;" class="bg-yurtski-blue button" href="https://montanabackcountryyurts.com/jan-avy-two">Book Now!</a>
