Automagically building YurtSki from moba

--- a/classes.html
+++ b/classes.html
@@ -337,7 +337,7 @@ Check out our preliminary schedule for the 2019-2020 season below. </p>
         
 
          <div class="mt12 focus-box">
-	<h5>AIARE Level 2 Avalanche Course</h5>
+	<h5>AIARE Level 2 Avalanche Course + Avalanche Rescue</h5>
 
 	<h6 class='focus-emphasis'>January 2-5, 2020</h6>
 
@@ -345,7 +345,7 @@ Check out our preliminary schedule for the 2019-2020 season below. </p>
 
 	<p class='tight'>$700</p>
 
-	<p class='tight'><em>4 Days of all-inclusive AIARE avalanche education: 1 for Avy Rescue followed by a 3-day Level 2 course. </em></p>
+	<p class='tight'><em>Yurt-based all-inclusive AIARE avalanche education: 1-day <a target="_blank" href="https://avtraining.org/aiare-avalanche-rescue/">Avalanche Rescue course</a> followed by a 3-day <a target="_blank" href="https://avtraining.org/aiare-level-2/">Level 2 course</a>.</em></p>
 
 	
 		<a style="position:absolute; top:75px; right:10px;" class="bg-yurtski-blue button" href="https://montanabackcountryyurts.com/jan-avy-two">Book Now!</a>
