Automagically building YurtSki from moba

--- a/about.html
+++ b/about.html
@@ -231,14 +231,15 @@
 </style>
 <div id="banner">
 	<p id='close-button'>x</p>
-	<h6>Interested in Backcountry Medicine? Take an AERIE course at the Big Belt Hut this summer!  <a href="http://montanabackcountryyurts.com/classes#summer">Wilderness First Aid + CPR and Wilderness First Responder</a></h6>
-	
+	<h6>Interested in Backcountry Medicine? Take an AERIE <a href="http://montanabackcountryyurts.com/wilderness-first-responder">Wilderness First Responder</a> course at the Big Belt Hut this summer! </h6>
+
 </div>
 <script>
 	document.getElementById('close-button').addEventListener('click',function(){
-		document.getElementById('banner').style.display='none';	
+		document.getElementById('banner').style.display='none';
 	})
 </script>
+
   <section class="container row">
     <div class="ten columns">
       <div class="breadcrumbs">
