--- a/packing.html
+++ b/packing.html
@@ -230,8 +230,8 @@
 
 </style>
 <div id="banner">
-	<p id='close-button'>x</p>
-	<h6>Interested in Backcountry Medicine? Take an AERIE <a href="http://montanabackcountryyurts.com/wilderness-first-responder">Wilderness First Responder</a> course at the Big Belt Hut this summer! </h6>
+	<!-- <p id='close-button'>x</p> -->
+	<!-- <h6>Interested in Backcountry Medicine? Take an AERIE <a href="http://montanabackcountryyurts.com/wilderness-first-responder">Wilderness First Responder</a> course at the Big Belt Hut this August! </h6> -->
 
 </div>
 <script>
