Automagically building YurtSki from moba

--- a/book.html
+++ b/book.html
@@ -252,7 +252,8 @@
 
       <div id="content" class="page-main-content">
           <p>Book your trip for next season now! The yurts will set up by December 3, 2019.</p>
-<p>Can't wait until then? The <a href="https://montanabackcountryyurts.com/bigbelthut/book">Big Belt Hut</a> is open year round: Catch the corn-skiing this Spring at 25% off with promo code: <em>SUMMERHUT</em></p>
+<p>Can't wait until then? The <a href="https://montanabackcountryyurts.com/bigbelthut/book">Big Belt Hut</a> is open year round!
+	<!-- : Catch the corn-skiing this Spring at 25% off with promo code: <em>SUMMERHUT</em></p> -->
 
 <hr id="alpine"><br><br>
 
