--- a/index.html
+++ b/index.html
@@ -236,11 +236,11 @@
 	<!-- <h6>Interested in Backcountry Medicine? Take an AERIE <a href="http://montanabackcountryyurts.com/wilderness-first-responder">Wilderness First Responder</a> course at the Big Belt Hut this August! </h6> -->
 
 </div>
-<script>
+<!-- <script>
 	document.getElementById('close-button').addEventListener('click',function(){
 		document.getElementById('banner').style.display='none';
 	})
-</script>
+</script> -->
 
   <section class="container row">
     <div class="ten columns">
