--- a/classes.html
+++ b/classes.html
@@ -323,7 +323,7 @@ Check out our preliminary schedule for the 2019-2020 season below. </p>
 </em></p>
 
 	
-		<a style="position:absolute; top:75px; right:10px;" class="bg-yurtski-blue button" href="https://montanabackcountryyurts.com/dec-avy-one">Book Now!</a>
+		<p style="position:absolute; top:75px; right:10px;" class="sold-out button">Sold Out!</p>
 	
 
 </div>
