Automagically building YurtSki from moba

--- a/classes.html
+++ b/classes.html
@@ -256,17 +256,19 @@
 
       <div id="content" class="page-main-content">
           <div id="winter" class="u-full-width call-to-action" style="background-image:url('/img/jane_with_snowblock.jpg');">
-  <h4>Take a class at YurtSki!</h4>
+  <h4>Avalanche and Backcountry Skiing Courses at YurtSki!</h4>
 </div>
-
-
-
-<p>Thinking about taking an avalanche course or introductory backcountry skills clinic next winter? 
-Check out our preliminary schedule for the 2019-2020 season below. </p>
 
 <p>We offer classes at both our Big Belt Hut and YurtSki locations, see <a href="https://montanabackcountryyurts.com/classes">montanabackcountryyurts.com/classes</a> for the complete list. Below are the courses happening at YurtSki only.
 
 <p>Questions? Send us an email: <a href="mailto:info@montanabackcountryyurts.com">info@montanabackcountryyurts.com</a></p>
+
+<div class='highlight'>
+  <h6 class='yurtski-blue italic'>Need to rent gear for a class?</h6>
+  <p>Visit <a target="_blank" href="https://mtskitech.com/">MT Ski Tech in Missoula</a>: <em>$229 for skis, boots, beacon, shovel, and probe</em> when you tell them you're taking a class with YurtSki!</p>
+</div>
+
+
 
 
 <div class="mt12 row">
@@ -286,7 +288,7 @@ Check out our preliminary schedule for the 2019-2020 season below. </p>
 
 	<h6 class='focus-emphasis'>December 13-15, 2019</h6>
 
-	<h6 class='focus-emphasis'>Location: <span class="location">YurtSki</span></h6>
+	<h6 class='focus-emphasis'>Location: <span class="italic">YurtSki</span></h6>
 
 	<p class='tight'>$600</p>
 
@@ -319,7 +321,7 @@ Check out our preliminary schedule for the 2019-2020 season below. </p>
 
 	<h6 class='focus-emphasis'>December 20-22, 2019</h6>
 
-	<h6 class='focus-emphasis'>Location: <span class="location">YurtSki</span></h6>
+	<h6 class='focus-emphasis'>Location: <span class="italic">YurtSki</span></h6>
 
 	<p class='tight'>$600</p>
 
@@ -327,7 +329,7 @@ Check out our preliminary schedule for the 2019-2020 season below. </p>
 </em></p>
 
 	
-		<p style="position:absolute; top:75px; right:10px;" class="sold-out button">Sold Out!</p>
+		<p style="position:absolute; top:75px; right:10px;" class="italic sold-out button">Sold Out</p>
 	
 
 </div>
@@ -348,7 +350,7 @@ Check out our preliminary schedule for the 2019-2020 season below. </p>
 
 	<h6 class='focus-emphasis'>January 2-5, 2020</h6>
 
-	<h6 class='focus-emphasis'>Location: <span class="location">YurtSki</span></h6>
+	<h6 class='focus-emphasis'>Location: <span class="italic">YurtSki</span></h6>
 
 	<p class='tight'>$700</p>
 
@@ -412,7 +414,7 @@ Check out our preliminary schedule for the 2019-2020 season below. </p>
 
 	<h6 class='focus-emphasis'>December 6-8, 2019</h6>
 
-	<h6 class='focus-emphasis'>Location: <span class="location">YurtSki</span></h6>
+	<h6 class='focus-emphasis'>Location: <span class="italic">YurtSki</span></h6>
 
 	<p class='tight'>$400</p>
 
