--- a/index.html
+++ b/index.html
@@ -278,12 +278,17 @@
 
 <p>At Yurtski we pride ourselves in providing unforgettable backcountry skiing experiences. Our goal is for people to enjoy the beauty of the Swan Range safely and in comfort while getting some incredible powder turns. See the video above for a glimpse of life at YurtSki, and then get a group together for an experience that will last a life time!</p>
 
-<p>Our yurts lie deep in the Montana backcountry and offer unparalleled access to some of Montana’s best powder skiing. Our immediate terrain is situated off a large horseshoe shaped ridge with finger ramps that separate the area into three main bowls which funnel back down to the yurts. The skiing ranges from mellow glades to steep wide open bowls. The area offers exceptional views of the Missions, Swans, and the Bob Marshall/Scapegoat Wilderness and has endless potential.
+<p>Throughout the season we also offer a number of <a href="classes.html" class='link'>avalanche classes and backcountry skiing clinics</a> to both introduce people to the wonders of backcountry skiing and teach learn how to make smart, safe decisions while enjoying it. We are proud to be an AIARE course provider, partnering with professional instructors and chefs to provide all-inclusive weekend courses.</p>
+
+<a href="classes.html" class='bg-yurtski-blue button u-full-width'>Classes at YurtSki</a>
+
+
+<p>Our yurts lie deep in the Montana backcountry and offer unparalleled access to some of Montana’s best powder skiing. Our immediate terrain is situated off a large horseshoe shaped ridge with finger ramps that separate the area into three main bowls which funnel back down to the yurts. The skiing ranges from mellow glades to steep wide open bowls. The area offers exceptional views of the Missions, Swans, and the Bob Marshall/Scapegoat Wilderness and has endless potential.</p>
 
 <p>The yurts sit nestled high in the Southern Swan Mountains of Montana, in between the Mission Mountains and the Bob Marshall Wilderness with a trailhead about an hour away from Missoula and 90 minutes from Helena.</p>
 
 
-<p class="align-center"><a class='link button' href="book">Book Now</a>
+<!-- <p class="align-center"><a class='link button' href="book">Book Now</a> -->
 
 
 <h4 class='border-b'>Getting to the Yurts</h4>
@@ -305,6 +310,8 @@
 <p class="pt6">Drinking water can be retrieved on the way into the yurts from a mountain spring so that you don't have to melt snow. In order to answer nature’s call in comfort there is a three sided outhouse located directly behind each yurt. There is also a Life flight extraction kit (helicopter specific backboard, splints, neck braces, emergency blanket, six man carry, basic first aid, rescue toboggan).</p>
 
 <p class="pt6">The Seeley-Swan area of Montana is known for its colder weather and heavier snow falls. This translates to incredible cold smoke powder skiing. Storms dumping multiple feet of snow are not uncommon. The immediate Yurtski terrain consists of a horseshoe shaped ridge that is separated into three main bowls by short finger ramps. The skiing in these areas ranges from steep cliff sections and chutes to mellow burnt tree runs which funnel back towards the yurts. There is also ample opportunity to tour the ridge and drop off the backside towards the Bob Marshall & Scapegoat Wilderness. Longer tours may decide to drop off the backside to a lake for lunch and laps.</p>
+
+<p class="align-center"><a class='link button u-full-width bg-yurtski-blue' href="book">View Booking Calendar</a>
 
 <h4 class="txt-h4 border-b pt24 mb12">The Rich Ranch: Lodging at the Trailhead</h4>
 Located just a quarter mile down the road from the YurtSki trailhead, <a class="link" target="_blank" href="http://richranch.com">Rich's Montana Guest Ranch</a> offers cabin rooms for rent. Their winter rates are: 
