Automagically building YurtSki from moba

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 <p>The yurts sit nestled high in the Southern Swan Mountains of Montana, in between the Mission Mountains and the Bob Marshall Wilderness with a trailhead about an hour away from Missoula and 90 minutes from Helena.</p>
 
 
-<!-- <p class="align-center"><a class='link button' href="book">Book Now</a> -->
+<!-- <p class="align-center"><a class='u-full-width link button bg-yurtski-blue' href="book">Book Now</a> -->
 
 
 <h4 class='border-b'>Getting to the Yurts</h4>
