Automagically building YurtSki from moba

--- a/classes.html
+++ b/classes.html
@@ -266,8 +266,6 @@
 
 <p>We offer classes at both our Big Belt Hut and YurtSki locations, see <a href="https://montanabackcountryyurts.com/classes">montanabackcountryyurts.com/classes</a> for the complete list. Below are the courses happening at YurtSki only.
 
-<p>Questions? Send us an email: <a href="mailto:info@montanabackcountryyurts.com">info@montanabackcountryyurts.com</a></p>
-
 <div class='highlight'>
   <h6 class='yurtski-blue italic'>Need to rent gear for a class?</h6>
   <p>Visit <a target="_blank" href="https://mtskitech.com/">MT Ski Tech in Missoula</a>: <em>$229 for skis, boots, beacon, shovel, and probe</em> when you tell them you're taking a class with YurtSki!</p>
@@ -471,6 +469,8 @@
     
   </div>
 </div>
+
+<p>Questions? Send us an <a href="mailto:info@montanabackcountryyurts.com">email!</a> See <a href="https://montanabackcountryyurts.com/course-itineraries.html"> itineraries from previous courses</a> to learn more about taking a course at YurtSki.</p>
       </div>
     </div>
     <div class="two columns right-sidebarright">
