--- a/about.html
+++ b/about.html
@@ -326,6 +326,13 @@ The trailhead is located on Cottonwood Lakes road at the winter plowing boundary
 <h4 class="faq-section">Is there an outhouse?</h4>
 <p>There is a three sided outhouse located directly behind each yurt in order to answer nature’s call in relative comfort.</p>
 
+
+<h4 class="faq-section">Cancellation Policy?</h4>
+<p>Montana Backcountry Yurts requires a 50% nonrefundable deposit at the time of booking. You can choose to use the "Pay Now" in your invoice to pay the remaining 50% any time before your trip. We will charge any outstanding balance to your credit card 30 days prior to your trip. If booking less than 30 days in advance, we require you to pay in full.</p>
+
+<p>You can cancel your trip up to 30 days prior to your start date online at yurtski.checkfront.com, by email: info@montanabackcountryyurts.com, or by phone: (406) 848-4824. Your deposit will not be refunded, but we will not charge you the remaining balance.</p>
+
+<p>Trips canceled less than 1 month prior to the start date are still required to be paid in full and are nonrefundable.</p>
       </div>
     </div>
     <div class="two columns right-sidebarright">
