Automagically building YurtSki from moba

--- a/friends.html
+++ b/friends.html
@@ -262,7 +262,11 @@
         </div>
 
       <div id="content" class="page-main-content">
-          FRIENDS WEEKEND 2019!
+          <h2>Join us at YurtSki December 27 - 29 for a Friends Weekend!</h2>
+
+<img class='u-full-width' src="img/friends.png" />
+
+<h5>Secure your spot by purchasing the item below and filling out the liability waiver, Thanks!</h5>
 
 <script type="text/javascript" src="//yurtski.checkfront.com/lib/interface--0.js"></script>
 <!-- CHECKFRONT BOOKING PLUGIN v25-->
