--- a/friends.html
+++ b/friends.html
@@ -268,6 +268,8 @@
 
 <h5>Secure your spot by purchasing the item below and filling out the liability waiver, Thanks!</h5>
 
+<p>We're stoked to show our friends the improvements we've made this year at YurtSki and get some powder skiing in! Enjoy a weekend with us at half price, we just ask that you spread the word and be sure to tag us on Social Media!</p>
+
 <script type="text/javascript" src="//yurtski.checkfront.com/lib/interface--0.js"></script>
 <!-- CHECKFRONT BOOKING PLUGIN v25-->
 <div id="CHECKFRONT_WIDGET_01"><p id="CHECKFRONT_LOADER" style="background: url('//yurtski.checkfront.com/images/loader.gif') left center no-repeat; padding: 5px 5px 5px 20px">Searching Availability...</p></div>
