Automagically building YurtSki from moba

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta charset="utf-8">
-	<title></title>
+	<title>About / FAQ</title>
 
 	<meta name="description" content="Montana Backcountry Yurts and YurtSki operate yurts in the Montana backcountry on Forest Service lands to provide lodging for backcountry and outdoor recreation">
 	
@@ -258,7 +258,7 @@
       <div class="breadcrumbs">
         <a href="https://montanabackcountryyurts.com">Montana Backcountry Yurts</a> >
         <a href="https://montanabackcountryyurts.com/yurtski/">YurtSki</a> > 
-        
+        About / FAQ
         </div>
 
       <div id="content" class="page-main-content">
@@ -294,10 +294,10 @@ The trailhead is located on Cottonwood Lakes road at the winter plowing boundary
 <p>The trip into Yurt Ski is 11 miles on the road, or 8 miles if you cut the switchback and climb with skins.  A gear haul in makes the most of your trip by getting you and your stuff into the yurts so you can ski and enjoy!  We will also make sure to point out the freshwater spring, start you off with a full supply of water, and make sure the firewood is stocked and ready.</p>
 
 <h4 class="faq-section">Why are there daily minimums?</h4>
-<p>The minimum allows us to ensure exclusivity to your group while staying at the yurts. We have different minimums for each yurt to accommodate different group sizes. Minimums are in dollars, not people. For example, groups of 2 or 3 are more than welcome to rent out the Lupine Yurt on a weekend night, they will just be paying the price of a 4 person group.</p>
+<p>The minimum allows us to ensure exclusivity to your group while staying at the yurts. We have different minimums for each yurt to accommodate different group sizes. Minimums are in dollars, not people. For example, groups of 2 or 3 are more than welcome to rent out the Lupine Yurt on a weekend night, they will just be paying the price of a 4 person group. Additionally, due to the terrain at the yurts, we require all parties to be at least 2 people for avalanche safety.</p>
 
 <h4 class="faq-section">How many people can stay in the yurts?</h4>
-<p>Both yurts have 2 full-size bunk beds allowing for individual sleeping for 4 people or 8 if sharing the full-size mattresses. Additionally, the slightly larger Alpine Yurt has 2 cots that can be easily assembled.</p>
+<p>Both yurts have 2 full-size bunk beds allowing for individual sleeping for 4 people or 8 if sharing the full-size mattresses. Additionally, the slightly larger Alpine Yurt has 2 futon couches that can be converted into beds.</p>
 
 <h4 class="faq-section">What type of terrain is in the area?</h4>
 <p>The immediate Yurtski terrain consists of a horseshoe shaped ridge that is separated into three main bowls by short finger ramps. The skiing in these areas ranges from steep cliff sections and chutes to mellow burnt tree runs which funnel back towards the yurts. There is also ample opportunity to tour the ridge and drop off the backside towards the Bob Marshall & Scapegoat Wilderness. Longer tours may decide to drop off the backside to a lake for lunch and laps.</p>
